# databricks-mcp

./: .gitignore  Dockerfile  README.md  env.sample  main.py  pyproject.toml
scripts/: docker_build.sh
src/api/compute/: __init__.py  clusters.py  command_execution.py  libraries.py
src/api/sql/: sql_warehouses.py  statement_execution.py
src/api/workspace/: objects.py
src/core/: config.py  http.py  logging.py  utils.py
src/mcp_components/: __init__.py
src/mcp_components/prompts/: __init__.py  prompts.py
src/mcp_components/tools/: __init__.py  tools_cluster.py  tools_command_execution.py  tools_libraries.py  tools_sql.py  tools_workspace.py
src/server/: databricks_mcp.py
tests/cluster/: requirements.txt
tests/create_tables/: config.yml  tables.yml
tests/notebook_upload/: sample1.py
